# PackageRef.py

./: .gitlab-ci.yml  ReadMe.md  pyproject.toml  setup.cfg
.ci/: pythonPackagesToInstallFromGit.txt
PackageRef/: __init__.py
tests/: tests.py
