[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "PackageRef"
authors = [{name = "KOLANICH"}]
description = "Represents a reference to a package."
readme = "ReadMe.md"
keywords = ["package", "location"]
license = {text = "Unlicense"}
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.4"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/prebuilder/PackageRef.py"

[project.optional-dependencies]
versioned = ["AnyVer @ git+https://github.com/prebuilder/AnyVer.py.git"]

[tool.setuptools]
zip-safe = true
packages = ["PackageRef"]
include-package-data = false

[tool.setuptools_scm]
